syntax = "proto3";

package seigr;

import "access_control.proto"; // For seigr.access_control.AccessPolicy

// ===========================
// ENUMS
// ===========================

enum IdentityStatus {
    IDENTITY_STATUS_UNDEFINED = 0;
    IDENTITY_ACTIVE = 1;
    IDENTITY_SUSPENDED = 2;
    IDENTITY_REVOKED = 3;
    IDENTITY_PENDING_VERIFICATION = 4;
    IDENTITY_EXPIRED = 5;
}

enum IdentityType {
    IDENTITY_TYPE_UNDEFINED = 0;
    IDENTITY_USER = 1;
    IDENTITY_SENSOR = 2;
    IDENTITY_SERVER = 3;
    IDENTITY_APPLICATION = 4;
    IDENTITY_DEVICE = 5;
}

enum PrivacyLevel {
    PRIVACY_PUBLIC = 0;
    PRIVACY_PARTIAL_TRACE = 1;
    PRIVACY_SEMI_ANONYMOUS = 2;
    PRIVACY_FULL_ANONYMOUS = 3;
    PRIVACY_SELECTIVE_EXPOSURE = 4;
}

enum VerificationLevel {
    VERIFICATION_LEVEL_UNDEFINED = 0;
    VERIFICATION_LOW_TRUST = 1;
    VERIFICATION_MEDIUM_TRUST = 2;
    VERIFICATION_HIGH_TRUST = 3;
    VERIFICATION_ADMIN_VERIFIED = 4;
    VERIFICATION_CUSTOM = 5;
}

// ===========================
// ALIAS IDENTITY
// ===========================

message AliasIdentity {
    string alias_id = 1;
    IdentityStatus status = 2;
    PrivacyLevel privacy_level = 3;
    IdentityType identity_type = 4;
    string alias_name = 5;
    string alias_signature = 6;
    repeated seigr.access_control.AccessPolicy alias_access_policies = 7; // Fixed Namespace
    map<string, string> alias_metadata = 8;
    string expiration_timestamp = 9;
    repeated string related_aliases = 10;
    string traceability_level = 11;
}

// ===========================
// IDENTITY AUDIT LOG
// ===========================

message IdentityAuditLog {
    string action = 1;
    string performed_by = 2;
    string timestamp = 3;
    string status = 4;
    string details = 5;
    map<string, string> metadata = 6;
    map<string, string> action_details = 7;
    string compliance_tag = 8;
}

// ===========================
// MAIN IDENTITY
// ===========================

message SeigrIdentityData {
    int64 creation_timestamp = 1;
    IdentityType identity_type = 2;
    IdentityStatus status = 3;

    bytes senary_id = 4;
    bytes owner_public_key = 5;
    bytes encrypted_private_key = 6;
    bytes owner_signature = 7;

    bool revoked = 8;
    string revocation_reason = 9;
    VerificationLevel verification_level = 10;
    map<string, string> verification_metadata = 11;

    repeated seigr.access_control.AccessPolicy access_policies = 12; // Fixed Namespace
    repeated IdentityAuditLog audit_logs = 13;
    string version = 14;
    map<string, string> metadata = 15;

    bytes encryption_key = 16;
    string usb_path = 17;
    bool usb_required = 18;
    string last_used_timestamp = 19;
    map<string, string> security_parameters = 20;
    bool multi_factor_enabled = 21;
    string security_policy_id = 22;

    repeated AliasIdentity aliases = 23;
    string expiration_timestamp = 24;
    string reactivation_code = 25;
    string key_rotation_schedule = 26;
    PrivacyLevel default_privacy_level = 27;
}
